<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:gauge="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avancer"
        android:id="@+id/buttonA"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reculer"
        android:id="@+id/buttonR"
        android:layout_below="@+id/buttonD"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gauche"
        android:id="@+id/buttonG"
        android:layout_below="@+id/buttonA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"/>

    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droite"
        android:id="@+id/buttonD"
        android:layout_below="@+id/buttonA"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerer"
        android:id="@+id/buttonAcc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ralentir"
        android:id="@+id/buttonRal"
        android:layout_alignRight="@+id/buttonR"
        android:layout_alignEnd="@+id/buttonR"
        android:layout_alignParentBottom="true"/>
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/buttonQuit"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/buttonD"
        android:layout_alignEnd="@+id/buttonD" />

    <de.nitri.gauge.Gauge
        android:id="@+id/gauge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        gauge:initialValue="0"
        gauge:maxValue="100"
        gauge:minValue="0"
        gauge:totalNicks="120"
        gauge:valuePerNick="10"
        android:layout_alignParentRight="true"/>

</RelativeLayout>